# temperature_gradient_navigation

./: CMakeLists.txt  README.md  package.xml
config/: gmapping_params.yaml  kamu_map.pgm  opti_map.pgm  opti_map.yaml  opti_map_0.01m.pgm  rviz.rviz
config/models/kamu_map/: model.sdf
config/models/meshes/: opti_map.STL
config/models/opti_map/: model.config  model.sdf
config/urdf/: agent.urdf
config/worlds/: kamu_map.world  opti_map.world
include/temperature_gradient_navigation/: temperature_gradient_navigation.h
launch/: gmapping.launch  load_map.launch  load_offline_map.launch  move_agent.launch  spawn_agent.launch  temperature_gradient_navigation.launch  temperature_gradient_navigation_offline.launch  temperature_gradient_navigation_online.launch  turtlebot3_gmapping.launch  visualization.launch
src/temperature_gradient_navigation/: temperature_gradient_navigation.cpp  temperature_gradient_navigation_node.cpp
srv/: get_trajectory.srv  poll_trajectory.srv  traverse.srv
