<?xml version="1.0"?>
<package format="2">
  <name>temperature_gradient_navigation</name>
  <version>1.12.0</version>
  <description>SNG method will be implemented in this package.</description>
  <maintainer email="oguz.ozdemir@ieee.metu.edu.tr">Oguz Ozdemir</maintainer>
  <author email="oguz.ozdemir@ieee.metu.edu.tr">Oguz Ozdemir</author>

  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>random_numbers</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/config/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/config/models"/>
  </export>
</package>
